--- a/pset4_template.qmd
+++ b/pset4_template.qmd
@@ -41,7 +41,7 @@ Please refer to the minilesson on code style
 10. (Partner 1): tag your submission in Gradescope
 
 **Important:** Repositories are for tracking code. **Do not commit the data or shapefiles to your repo.** The best way to do this is with `.gitignore`, which we have covered in class. If you do accidentally commit the data, Github has a [guide](https://docs.github.com/en/repositories/working-with-files/managing-large-files/about-large-files-on-github#removing-files-from-a-repositorys-history). The best course of action depends on whether you have pushed yet. This also means that both partners will have to download the initial raw data and any data cleaning code will need to be re-run on both partners' computers. 
-**Note:** We created separate datasets to work on our respective sections individually, rather than sharing a single dataset. So, the names of dataframes and columns will vary between sections.
+**Note:** We created separate datasets to work on our respective sections individually, rather than sharing the datasets. So, the names of dataframes and columns will vary between sections.
 
 ```{python}
 import pandas as pd
@@ -331,14 +331,20 @@ hosp_geo = hosp_tex_2016[['ZIP_CD', 'geometry']].drop_duplicates().merge(
     hosp_per_zip, on = 'ZIP_CD', how = 'left').fillna(0)
 
 # choropleth of hospitals by zip code
-#plt.figure(figsize = (20, 16), dpi = 1000)
-#hosp_geo.plot(cmap = 'OrRd', legend = True, edgecolor = 'black').set_axis_off()
-#plt.title('Number of Hospitals per ZIP Code in Texas 2016')
-#plt.show()
-fig, ax = plt.subplots(figsize=(10, 10))
-hosp_geo.plot(column='hospital_count', legend=True, ax=ax).set_axis_off()
-plt.title('Hospitals per ZIP Code in Texas')
+plt.figure(figsize=(20, 16), dpi=1000)
+hosp_geo.plot(column='hospital_count', 
+            cmap='Reds',
+              edgecolor='black',
+              vmin=0,  # Start color scale at 0
+              vmax=50   # Adjust this value to increase contrast
+              ).set_axis_off()
+plt.title('Number of Hospitals per ZIP Code in Texas 2016')
 plt.show()
+
+#fig, ax = plt.subplots(figsize=(10, 10))
+#hosp_geo.plot(column='hospital_count', legend=True, ax=ax).set_axis_off()
+#plt.title('Hospitals per ZIP Code in Texas')
+#plt.show()
 ```
 
 ## Calculate zip code’s distance to the nearest hospital (20 pts) (*)
@@ -631,6 +637,8 @@ clos_zips = clos_tex.groupby('ZIP').size().reset_index(name = 'closure_count')
 2. There are 103 directly affected ZIP codes in Texas.
 
 ```{python}
+from matplotlib.colors import LogNorm
+
 clos_zips.shape
 
 # merge texas data and closed hospital data only on all Texas hospital data
@@ -648,14 +656,19 @@ clos_geo = pd.merge(clos_df_agg, texas_df, how = 'right', left_on = 'ZCTA5', rig
 clos_geo = gpd.GeoDataFrame(clos_geo, geometry = 'geometry')
 
 # choropleth of closed hospitals by zip code
-#plt.figure(figsize=(20, 16), dpi=1000)
-#clos_geo.plot(column='Closed', cmap='OrRd', legend=True, edgecolor='black').set_axis_off()
-#plt.title('Number of Affected Hospitals per ZIP Code in Texas')
-#plt.show()
-fig, ax = plt.subplots(figsize=(10, 10))
-clos_geo.plot(column='Closed', legend=True, ax=ax).set_axis_off()
+plt.figure(figsize=(20, 16), dpi=1000)
+clos_geo.plot(column='Closed', 
+            cmap='Reds',
+              edgecolor='black',
+              vmin=0,  # Start color scale at 0
+              vmax=2   # Adjust this value to increase contrast
+              ).set_axis_off()
 plt.title('Number of Directly Affected Hospitals per ZIP Code in Texas')
 plt.show()
+#fig, ax = plt.subplots(figsize=(10, 10))
+#clos_geo.plot(column='Closed', cmap='OrRd', legend=True, ax=ax).set_axis_off()
+#plt.title('Number of Directly Affected Hospitals per ZIP Code in Texas')
+#plt.show()
 ```
 
 3. There are 1009 indirectly affected ZIP codes in Texas.
@@ -688,14 +701,17 @@ print(ind_affected['ZCTA5'].nunique())
 4. 
 
 ```{python}
+from matplotlib.colors import ListedColormap
+
 # classifying zip codes as affected, not affected, indirectly affected in main Texas shapefile
 texas_df['status'] = 'Not Affected'
-texas_df.loc[texas_df['ZCTA5'].isin(clos_tex['ZCTA5']), 'status'] = 'Directly Affected'
 texas_df.loc[texas_df['ZCTA5'].isin(ind_affected['ZCTA5']), 'status'] = 'Indirectly Affected'
+texas_df.loc[texas_df['ZCTA5'].isin(clos_tex['ZCTA5']), 'status'] = 'Directly Affected'
 
 # choropleth
-fig, ax = plt.subplots(figsize=(10, 10))
-texas_df.plot(column='status', legend=True, ax=ax)
+colors = ['darkred', 'lightcoral', 'white']
+custom_cmap = ListedColormap(colors)
+texas_df.plot(column = 'status', cmap = custom_cmap, legend = True, edgecolor = 'black').set_axis_off()
 plt.title('Hospital Closure Effects by ZIP Code')
 plt.show()
 ```
